proper atomic redeploys (with 'freeze' concept), better app manager error handling

--- a/main/reka-main-uberjar/data-apps/reka-ui/layout.jade
+++ b/main/reka-main-uberjar/data-apps/reka-ui/layout.jade
@@ -18,7 +18,7 @@ html
               i.fa.fa-cogs
               span.name
                 span.first reka
-                span.second status
+                span.second ui
               
       section.top-bar-section
         ul
