--- a/reka-deploy/roles/reka/files/config/reka-ui/app.css
+++ b/reka-deploy/roles/reka/files/config/reka-ui/app.css
@@ -10,7 +10,11 @@ footer {
 	z-index: -10;
 }
 
-.app img.vis {
+section.app {
+	cursor: pointer;
+}
+
+section.app img.vis {
 	height: 160px;
 }
 
@@ -81,9 +85,11 @@ span.address {
 }
 
 section.app {
-	padding: 10px 20px;
 	border-left: 10px solid #f5f5f5;
 	margin: 20px 0;
+  background-color: #fafafa;
+  padding: 10px 10px 20px 20px;
+  position: relative;
 }
 
 section.app h1 {
@@ -96,11 +102,38 @@ section.app form {
 	margin-bottom: 0;
 }
 
+section.app form.action-remove {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+section.app form button {
+    margin-bottom: 0;
+}
+
 section.app:hover {
 	background-color: #f5f5f5;
 	background-color: #F1F4F9;
 	border-left-color: #D9E5F9;
 	/*cursor: pointer;*/
+}
+
+
+section.app .actions {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    right: 0px;
+}
+
+section.app .actions button {
+    opacity: 0.6;
+    font-size: 14px;
+}
+
+section.app:hover .actions button {
+    opacity: 1;
 }
 
 .ace_comment {
@@ -177,23 +210,28 @@ button:focus,
 	color: #68b;
 }
 
+/*
 .actions>*,
 .actions .button,
 .actions button {
 	width: 100%;
 }
 
+*/
+
+
+
 .actions .button,
 .actions button {
 	font-size: 1em;
 	text-align: left;
-	padding-left: 44px;
+	padding-left: 16px;
 }
 
 .actions .button i.fa,
 .actions button i.fa {
 	font-size: 1.5em;
-	padding-right: 0.5em;
+	padding-right: 0em;
 	position: absolute;
 	left: 14px;
 	top: 10px;
@@ -236,7 +274,7 @@ ul.ports {
 	list-style: none;
 	font-size: 1.2em;
 	margin: 0;
-	margin-top: 20px;
+	margin-top: 10px;
 }
 
 ul.ports span.port {
@@ -301,6 +339,12 @@ section.app.flow {
 	padding-left: 30px;
 }
 
+section.app h1 {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 section.flow img.vis {
 	height: 220px;
 	margin-bottom: 20px;
@@ -324,6 +368,10 @@ section.detail {
 	font-size: 4em;
 }
 
+.app-detail button {
+    font-size: 14px;
+}
+
 .flows>.flow {
 	float: left;
 	margin: 20px;
@@ -340,4 +388,18 @@ section.detail {
 
 section.detail {
 	clear: both;
+}
+
+pre.json {
+    display: block;
+    padding: 20px;
+    margin: 0px 0px 10px;
+    font-size: 14px;
+    line-height: 1.42857;
+    color: #333;
+    word-break: break-all;
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    background-color: #F5F5F5;
+    font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
 }
