--- a/reka-deploy/roles/reka/templates/reka.upstart.conf.j2
+++ b/reka-deploy/roles/reka/templates/reka.upstart.conf.j2
@@ -7,4 +7,9 @@ stop on runlevel [!2345]
 respawn
 
 chdir /var/apps/reka
-exec java -server -Xmx384m -jar lib/reka-main.jar config/config.reka >> reka.log 2>&1
+exec java \
+  -server \
+  -XX:+UseConcMarkSweepGC \
+  -Xmx256m \
+  -jar lib/reka-main.jar \
+  config/config.reka >> reka.log 2>&1
