Makefile-ized some stuff, implement @env macro

--- a/docker/config/apps/reka-ui/layout.jade
+++ b/docker/config/apps/reka-ui/layout.jade
@@ -3,9 +3,9 @@ html
   head
     meta(charset='utf-8')
      
-    link(rel='stylesheet', href='//cdn.jsdelivr.net/foundation/5.0.2/css/foundation.min.css')
-    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css')
-    link(rel='stylesheet', href='/css/app.css')
+    link(rel='stylesheet', type='text/css', href='/css/foundation.css')
+    link(rel='stylesheet', type='text/css', href='/css/font-awesome.css')
+    link(rel='stylesheet', type='text/css', href='/css/app.css')
     
     script(type='text/javascript', src='//cdn.jsdelivr.net/foundation/5.0.2/js/jquery.js')
     
@@ -53,5 +53,3 @@ html
                 != html.sidebar
                 
     footer
-    
-    script(type='text/javascript', src='//cdn.jsdelivr.net/foundation/5.0.2/js/foundation.min.js')
