add app meta, remove old trigger mechanism

--- a/docker/config/apps/reka-ui/running/show/main.jade
+++ b/docker/config/apps/reka-ui/running/show/main.jade
@@ -1,5 +1,13 @@
 .app-detail
 
+  if app.meta
+    table.meta
+      each value, name in app.meta
+        tr
+          th= name
+          td= value
+
+
   h1= app.name
   pre.appid= id
 
