--- a/docker/config/apps/reka-ui/app.css
+++ b/docker/config/apps/reka-ui/app.css
@@ -1,52 +1,52 @@
 footer {
-	margin-top: 200px;
+  margin-top: 200px;
 }
 
 .home.fa {
-	font-size: 680px;
-	color: #f5f5f5;
-	position: fixed;
-	top: 60px;
-	z-index: -10;
+  font-size: 680px;
+  color: #f5f5f5;
+  position: fixed;
+  top: 60px;
+  z-index: -10;
 }
 
 section.app {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 section.app img.vis {
-	height: 160px;
+  height: 160px;
 }
 
 button i.fa,
 .button i.fa {
-	padding-right: 1em;
+  padding-right: 1em;
 }
 
 section.main {
-	padding-top: 20px;
+  padding-top: 20px;
 }
 
 section.top-bar-section {
-	font-size: 20px;
+  font-size: 20px;
 }
 
 section.top-bar-section i {
-	padding-right: 10px;
+  padding-right: 10px;
 }
 
 form.config textarea {
-	height: 500px;
+  height: 500px;
 }
 
 .ace_config-k,
 .ace_config-kw {
-	color: #f99 !important;
+  color: #f99 !important;
 }
 
 #config-editor {
-	width: 100%;
-	height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 /*
@@ -70,36 +70,36 @@ form.config textarea {
 */
 #config-editor-controls button,
 #config-editor-controls .button {
-	width: 100%;
+  width: 100%;
 }
 
 .title-area .name i.fa {
-	font-size: 60px;
-	color: #fff;
-	padding-top: 5px;
+  font-size: 60px;
+  color: #fff;
+  padding-top: 5px;
 }
 
 span.address {
-	padding-left: 10px;
-	color: #ccc;
+  padding-left: 10px;
+  color: #ccc;
 }
 
 section.app {
-	border-left: 10px solid #f5f5f5;
-	margin: 20px 0;
+  border-left: 10px solid #f5f5f5;
+  margin: 20px 0;
   background-color: #fafafa;
   padding: 10px 10px 20px 20px;
   position: relative;
 }
 
 section.app h1 {
-	margin-top: 0rem;
-	line-height: 1em;
-	margin-bottom: 1.2rem;
+  margin-top: 0rem;
+  line-height: 1em;
+  margin-bottom: 1.2rem;
 }
 
 section.app form {
-	margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 section.app form.action-remove {
@@ -114,10 +114,10 @@ section.app form .button {
 }
 
 section.app:hover {
-	background-color: #f5f5f5;
-	background-color: #F1F4F9;
-	border-left-color: #D9E5F9;
-	/*cursor: pointer;*/
+  background-color: #f5f5f5;
+  background-color: #F1F4F9;
+  border-left-color: #D9E5F9;
+  /*cursor: pointer;*/
 }
 
 
@@ -142,84 +142,84 @@ section.app:hover .actions .button {
 }
 
 .ace_comment {
-	color: #aaa !important;
+  color: #aaa !important;
 }
 
 .ace_doc_start,
 .ace_doc_end {
-	color: #D2E7EE !important;
+  color: #D2E7EE !important;
 }
 
 .ace_doc_type {
-	color: #B5DBEE !important;
+  color: #B5DBEE !important;
 }
 
 .ace_doc {
-	color: #308AB2 !important;
+  color: #308AB2 !important;
 }
 
 .ace_val {
-	color: #333 !important;
-	background-color: #fffff5;
+  color: #333 !important;
+  background-color: #fffff5;
 }
 
 .ace_paren {
-	color: #666 !important;
+  color: #666 !important;
 }
 
 .title-area .name .first {
-	padding-left: 5px;
-	font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
+  padding-left: 5px;
+  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
 }
 
 .title-area span.name {
-	position: relative;
-	bottom: 24px;
-	left: 5px;
+  position: relative;
+  bottom: 24px;
+  left: 5px;
 }
 
 .title-area span.name * {
-	font-size: 22px;
+  font-size: 22px;
 }
 
 .title-area span.name .second {
-	color: #B5CAE3;
+  color: #B5CAE3;
 }
 
 .top-bar,
 .top-bar-section ul li>a,
 .top-bar-section li a:not(.button) {
-	background: #68b;
+  background: #68b;
 }
 
 .top-bar-section li a:not(.button):hover {
-	background: #526D96;
+  background: #526D96;
 }
 
 button,
 .button {
-	background-color: #68b;
-	border-color: #68b;
+  background-color: #68b;
+  border-color: #68b;
 }
 
 button:hover,
 button:focus,
 .button:hover,
 .button:focus {
-	background-color: #526D96;
+  background-color: #526D96;
 }
 
 .top-bar-section ul li.active>a,
 .top-bar-section ul li.active>a:hover {
-	background: #fff;
-	color: #68b;
+  background: #fff;
+  color: #68b;
 }
 
 /*
 .actions>*,
 .actions .button,
 .actions button {
-	width: 100%;
+  width: 100%;
 }
 
 */
@@ -228,120 +228,120 @@ button:focus,
 
 .actions .button,
 .actions button {
-	font-size: 1em;
-	text-align: left;
-	padding-left: 16px;
+  font-size: 1em;
+  text-align: left;
+  padding-left: 16px;
 }
 
 .actions .button i.fa,
 .actions button i.fa {
-	font-size: 1.5em;
-	padding-right: 0em;
-	position: absolute;
-	left: 14px;
-	top: 10px;
+  font-size: 1.5em;
+  padding-right: 0em;
+  position: absolute;
+  left: 14px;
+  top: 10px;
 }
 
 .row {
-	max-width: none;
+  max-width: none;
 }
 
 .panel {
-	border-color: transparent !important;
+  border-color: transparent !important;
 }
 
 .panel.callout {
-	background-color: #fcf8e3;
+  background-color: #fcf8e3;
 }
 
 .panel.callout .fa {
-	font-size: 5em;
-	color: #DED08A;
+  font-size: 5em;
+  color: #DED08A;
 }
 
 body.editor section.main>.row>.columns {
-	position: fixed;
-	padding-top: 65px;
-	top: 0;
-	height: 100%;
-	z-index: -10;
+  position: fixed;
+  padding-top: 65px;
+  top: 0;
+  height: 100%;
+  z-index: -10;
 }
 
 body.editor section.main>.row>.main {
-	left: 0;
+  left: 0;
 }
 
 body.editor section.main>.row>.sidebar {
-	right: 0;
+  right: 0;
 }
 
 ul.ports {
-	list-style: none;
-	font-size: 1.2em;
-	margin: 0;
-	margin-top: 10px;
+  list-style: none;
+  font-size: 1.2em;
+  margin: 0;
+  margin-top: 10px;
 }
 
 ul.ports span.port {
-	color: #555;
+  color: #555;
 }
 
 ul.ports span.protocol {
-	padding-left: 10px;
-	padding-right: 10px;
-	color: #aaa;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #aaa;
 }
 
 ul.ports i.fa.green {
-	padding-right: 0.5em;
-	color: green;
+  padding-right: 0.5em;
+  color: green;
 }
 
 ul.ports span.port,
 ul.ports span.protocol,
 ul.ports ul.details {
-	font-family: 'Monaco',
+  font-family: 'Monaco',
  'Menlo',
  'Ubuntu Mono',
  'Consolas',
 
-		'source-code-pro',
+    'source-code-pro',
  monospace;
-	afont-size: 0.9em;
+  afont-size: 0.9em;
 }
 
 ul.ports ul.details {
-	list-style: none;
-	display: inline;
-	margin: 0;
-	padding: 0;
-	padding-left: 0.5em;
-	padding-right: 1em;
-	font-size: 0.7em;
+  list-style: none;
+  display: inline;
+  margin: 0;
+  padding: 0;
+  padding-left: 0.5em;
+  padding-right: 1em;
+  font-size: 0.7em;
 }
 
 ul.ports ul.details li {
-	display: inline;
-	margin: 0;
-	margin-left: 10px;
+  display: inline;
+  margin: 0;
+  margin-left: 10px;
 }
 
 ul.ports ul.details .name {
-	color: #333;
-	padding-right: 0.3em;
+  color: #333;
+  padding-right: 0.3em;
 }
 
 ul.ports ul.details .value {
-	padding-left: 0.3em;
-	padding: 3px 6px;
-	background-color: #fcf8e3;
-	color: #333;
+  padding-left: 0.3em;
+  padding: 3px 6px;
+  background-color: #fcf8e3;
+  color: #333;
 }
 
 section.app.flow {
-	/*border-left-color: #f5f5f5;*/
-	margin: 40px 0;
-	padding-left: 30px;
+  /*border-left-color: #f5f5f5;*/
+  margin: 40px 0;
+  padding-left: 30px;
 }
 
 section.app h1 {
@@ -353,26 +353,26 @@ section.app h1 {
 }
 
 section.flow img.vis {
-	height: 220px;
-	margin-bottom: 20px;
+  height: 220px;
+  margin-bottom: 20px;
 }
 
 section.detail {
-	border-top: 1px solid #ddd;
-	margin-top: 60px;
-	position: relative;
-	padding-top: 30px;
+  border-top: 1px solid #ddd;
+  margin-top: 60px;
+  position: relative;
+  padding-top: 30px;
 }
 
 .app-detail h2 {
-	position: absolute;
-	top: -36px;
-	background-color: #fff;
-	padding-right: 20px;
+  position: absolute;
+  top: -36px;
+  background-color: #fff;
+  padding-right: 20px;
 }
 
 .app-detail h1 {
-	font-size: 4em;
+  font-size: 4em;
 }
 
 .app-detail button {
@@ -380,21 +380,21 @@ section.detail {
 }
 
 .flows>.flow {
-	float: left;
-	margin: 20px;
-	padding: 20px;
-	box-shadow: 0px 0px 12px -5px rgba(0,0,0,0.2);
+  float: left;
+  margin: 20px;
+  padding: 20px;
+  box-shadow: 0px 0px 12px -5px rgba(0,0,0,0.2);
 }
 
 .flows>.flow img.vis {
-	height: 200px;
-	margin-top: 15px;
-	margin: 0 auto;
-	display: block;
+  height: 200px;
+  margin-top: 15px;
+  margin: 0 auto;
+  display: block;
 }
 
 section.detail {
-	clear: both;
+  clear: both;
 }
 
 pre.json {
@@ -409,4 +409,36 @@ pre.json {
     white-space: pre-wrap;
     background-color: #F5F5F5;
     font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
+}
+
+table.meta {
+  float: right;
+  border: none;
+  border-collapse: collapse;
+}
+
+table.meta tr {
+  background-color: #fff;
+}
+
+table.meta th {
+  text-align: right;  
+  padding-left: 20px;
+}
+
+table.meta td {
+  padding-right: 20px;
+}
+
+table.meta th,
+table.meta td {
+  background-color: #fafafa;
+  padding-top: 10px;
+  padding-bottom: 0;
+  
+}
+
+table.meta tr:last-child th,
+table.meta tr:last-child td {
+  padding-bottom: 10px;
 }
