--- a/reka-deploy/roles/reka/templates/reka.upstart.conf.j2
+++ b/reka-deploy/roles/reka/templates/reka.upstart.conf.j2
@@ -7,9 +7,4 @@ stop on runlevel [!2345]
 respawn
 
 chdir /var/apps/reka
-exec java \
-  -server \
-  -XX:+UseConcMarkSweepGC \
-  -Xmx256m \
-  -jar lib/reka-main.jar \
-  config/config.reka >> reka.log 2>&1
+exec bin/reka-server >> reka.log 2>&1
